<resources>
    <string name="app_name">EvaluacionJson-LeoCorea</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_see">See</string>
    <string name="title_add">Add</string>
    <string name="title_edit">Edition</string>
    <string name="title_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_required_field">Campo requerido</string>
    <string name="read_data">http://192.168.100.15:8080/coordinaccion/read_data.php</string>
</resources>